[package]
name = "wgpu-sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-executor = "1.4.1"
bytemuck = { version = "1.9.1", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.9.0"
glam = "0.20.5"
log = "0.4.16"
nice-path-rasterizer = { path = "./nice-path-rasterizer" }
pollster = "0.2.5"
wgpu = "0.12.0"
winit = "0.26.1"

[workspace]
members = ["nice-path-tessellator", "nice-path-rasterizer"]
