[package]
name = "nice-path-rasterizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.0.0"
bytemuck = { version = "1.9.1", features = ["derive"] }
nice-path-tessellator = { path = "../nice-path-tessellator" }
wgpu = "0.12.0"
